--- a/examples/example.html
+++ b/examples/example.html
@@ -511,7 +511,7 @@
                 width: 700,
                 height: 500,
                 collapsible: true,
-                title: 'ExtJS.com - Browse Forums',
+                title: 'Buffered Grid',
                 store: store,
                 loadMask: true,
                 selModel: {
