--- a/examples/example.html
+++ b/examples/example.html
@@ -53,8 +53,8 @@
 
             // sample static data for the store
             var myData = [
-                ['3m Co', 71.72, 0.02, 0.03, '9/1 12:00am'],
-                ['Alcoa Inc', 29.01, 0.42, 1.47, '9/1 12:00am'],
+                [null, 71.72, 0.02, 0.03, '9/1 12:00am'],
+                [undefined, 29.01, 0.42, 1.47, '9/1 12:00am'],
                 ['Altria Group Inc', 83.81, 0.28, 0.34, '9/1 12:00am'],
                 ['American Express Company', 52.55, 0.01, 0.02, '9/1 12:00am'],
                 ['American International Group, Inc.', 64.13, 0.31, 0.49, '9/1 12:00am'],
